# cpp-git-actions

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
.github/scripts/: configure-linux.sh  configure.bat  configure.sh
.github/workflows/: example.yml
